--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Pear_SpringMVC_Hibernate_CRUD_REST</name>
+	<name>Pear2.1</name>
 	<comment></comment>
 	<projects>
 	</projects>
